change the database and add songs blueprint

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,9 +33,11 @@
                     <div class="navbar-nav mr-auto">
                         {% if current_user.is_authenticated %}
                             {{ render_nav_item('auth.dashboard','Dashboard' ) }}
-                            {% if current_user.is_admin %}
-                                {{ render_nav_item('auth.browse_users','User Management' ) }}
-                            {% endif %}
+                            {{ render_nav_item('songs.songs_browse','My Songs' ) }}
+                            {{ render_nav_item('songs.songs_upload','Upload Songs' ) }}
+
+
+
 
                         {% else %}
                             {{ render_nav_item('simple_pages.index', 'Home') }}
